--- a/src/ProjectTemplates/Web.ProjectTemplates/Microsoft.DotNet.Web.ProjectTemplates.csproj
+++ b/src/ProjectTemplates/Web.ProjectTemplates/Microsoft.DotNet.Web.ProjectTemplates.csproj
@@ -13,6 +13,7 @@
     <!-- Lists the versions of dependencies not built in this repo. Packages produced from this repo should be listed as a PackageVersionVariableReference.  -->
     <GeneratedContentProperties>
       GoogleProtobufPackageVersion=$(GoogleProtobufPackageVersion);
+      GrpcAspNetCoreServerPackageVersion=$(GrpcAspNetCoreServerPackageVersion);
       GrpcCorePackageVersion=$(GrpcCorePackageVersion);
       GrpcToolsPackageVersion=$(GrpcToolsPackageVersion);
       MicrosoftAspNetCoreMvcRazorRuntimeCompilationPackageVersion=$(MicrosoftAspNetCoreMvcRazorRuntimeCompilationPackageVersion);
