--- a/eng/targets/CSharp.Common.props
+++ b/eng/targets/CSharp.Common.props
@@ -39,4 +39,6 @@
     <Reference Include="xunit.runner.console" Condition=" '$(TargetFrameworkIdentifier)' == '.NETFramework' AND '$(IsHelixJob)' == 'true' " />
   </ItemGroup>
 
+  <Import Project="CSharp.Refs.props" Condition="'$(IsReferenceAssemblyProject)' == 'true'" />
+
 </Project>
