--- a/eng/targets/ReferenceAssembly.targets
+++ b/eng/targets/ReferenceAssembly.targets
@@ -62,6 +62,7 @@
       <_GenAPICmd>$(_GenAPICmd) --lib-path "@(_ReferencePathDirectories)"</_GenAPICmd>
       <_GenAPICmd>$(_GenAPICmd) --out "$(_RefSourceFileOutputPath)"</_GenAPICmd>
       <_GenAPICmd>$(_GenAPICmd) --header-file "$(RepositoryRoot)/eng/LicenseHeader.txt"</_GenAPICmd>
+      <_GenAPICmd>$(_GenAPICmd) --exclude-api-list "$(RepositoryRoot)/eng/GenAPI.exclusions.txt"</_GenAPICmd>
     </PropertyGroup>
 
     <MakeDir Directories="$(_RefSourceOutputPath)" />
