--- a/src/Installers/Debian/Directory.Build.props
+++ b/src/Installers/Debian/Directory.Build.props
@@ -1,8 +1,11 @@
 <Project>
+  <PropertyGroup>
+    <OutputInRepoRoot>true</OutputInRepoRoot>
+  </PropertyGroup>
+
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory)..\, Directory.Build.props))\Directory.Build.props" />
 
   <UsingTask Condition=" '$(BuildToolsTaskAssembly)' != '' AND Exists('$(BuildToolsTaskAssembly)') " TaskName="Microsoft.AspNetCore.BuildTools.GenerateFileFromTemplate" AssemblyFile="$(BuildToolsTaskAssembly)" />
-
 
   <PropertyGroup>
     <OutputPath>$(InstallersOutputPath)</OutputPath>
